<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="160dp"
        android:text="@string/sensor_text_humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/sensor_text_light"
        app:layout_constraintStart_toStartOf="@+id/txtHumidity"
        app:layout_constraintTop_toBottomOf="@+id/txtHumidity" />

    <TextView
        android:id="@+id/txtPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/sensor_text_pressure"
        app:layout_constraintStart_toStartOf="@+id/txtLight"
        app:layout_constraintTop_toBottomOf="@+id/txtLight" />

    <TextView
        android:id="@+id/txtRHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toEndOf="@+id/txtHumidity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toEndOf="@+id/txtLight"
        app:layout_constraintTop_toBottomOf="@+id/txtRHumidity" />

    <TextView
        android:id="@+id/txtRPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toEndOf="@+id/txtPressure"
        app:layout_constraintTop_toBottomOf="@+id/txtRLight" />

    <Button
        android:id="@+id/btnFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="96dp"
        android:text="@string/off"
        app:layout_constraintStart_toStartOf="@+id/txtPressure"
        app:layout_constraintTop_toBottomOf="@+id/txtPressure" />

    <Button
        android:id="@+id/btnData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="@+id/btnFlag"
        app:layout_constraintTop_toBottomOf="@+id/btnFlag" />

    <TextView
        android:id="@+id/txtHigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:text="@string/higher"
        app:layout_constraintStart_toStartOf="@+id/txtHumidity"
        app:layout_constraintTop_toBottomOf="@+id/txtHumidity" />

    <TextView
        android:id="@+id/txtLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:ellipsize="end"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="@+id/txtHigher"
        app:layout_constraintStart_toEndOf="@+id/txtHigher" />

    <TextView
        android:id="@+id/txtAvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:ellipsize="end"
        android:text="@string/average"
        app:layout_constraintBottom_toBottomOf="@+id/txtLower"
        app:layout_constraintStart_toEndOf="@+id/txtLower" />

    <TextView
        android:id="@+id/txtLightHigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/higher"
        app:layout_constraintStart_toStartOf="@+id/txtLight"
        app:layout_constraintTop_toBottomOf="@+id/txtLight" />

    <TextView
        android:id="@+id/txtPressureHigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/higher"
        app:layout_constraintStart_toStartOf="@+id/txtPressure"
        app:layout_constraintTop_toBottomOf="@+id/txtPressure" />

    <TextView
        android:id="@+id/txtLightMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="@+id/txtLightHigher"
        app:layout_constraintStart_toStartOf="@+id/txtLower" />

    <TextView
        android:id="@+id/txtLightAvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average"
        app:layout_constraintBottom_toBottomOf="@+id/txtLightMin"
        app:layout_constraintStart_toStartOf="@+id/txtAvg" />

    <TextView
        android:id="@+id/txtPressureMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="@+id/txtPressureHigher"
        app:layout_constraintStart_toStartOf="@+id/txtLightMin" />

    <TextView
        android:id="@+id/txtPressureAvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average"
        app:layout_constraintBottom_toBottomOf="@+id/txtPressureMin"
        app:layout_constraintStart_toStartOf="@+id/txtLightAvg" />

    <Button
        android:id="@+id/btnCalculer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculer"
        app:layout_constraintEnd_toStartOf="@+id/btnData"
        app:layout_constraintTop_toTopOf="@+id/btnFlag" />

</androidx.constraintlayout.widget.ConstraintLayout>